[gd_scene load_steps=11 format=3 uid="uid://buai82f0qgs1s"]

[ext_resource type="Script" uid="uid://c3qgkhiqbxv82" path="res://main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://b1rtk2c1ol0uy" path="res://graphics/Snake_spritesheet.png" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://q3a4ye4ty85s" path="res://graphics/apple.png" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://bwvss0qixdinv" path="res://graphics/grass.png" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://w8he5q210wjs" path="res://scenes/score.tscn" id="5_tbgi4"]
[ext_resource type="AudioStream" uid="uid://cabl3b66lapb8" path="res://sounds/crunch.wav" id="6_tefeu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jyhfs"]
texture = ExtResource("2_sugp2")
texture_region_size = Vector2i(40, 40)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbgi4"]
texture = ExtResource("3_sugp2")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tefeu"]
texture = ExtResource("4_jyhfs")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_tbgi4"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_jyhfs")
sources/1 = SubResource("TileSetAtlasSource_tbgi4")
sources/2 = SubResource("TileSetAtlasSource_tefeu")

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Background" type="TextureRect" parent="."]
offset_right = 805.0
offset_bottom = 805.0
texture = ExtResource("4_jyhfs")
expand_mode = 2
stretch_mode = 1

[node name="SnakeApple" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_tbgi4")

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Score" parent="." instance=ExtResource("5_tbgi4")]

[node name="CrunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tefeu")

[connection signal="timeout" from="SnakeTick" to="." method="_on_snake_tick_timeout"]
